fix position searchcity button (andava a capo con ie9)

--- a/OpenSignals.Frontend/css/utils.css
+++ b/OpenSignals.Frontend/css/utils.css
@@ -306,6 +306,6 @@ input[type=button], input[type=reset]
 #search a.button
 {
     float: right;
-    margin-right: 13px;
+    padding-right: 10px;
     margin-top: 8px;
 }
